--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^9.17.2",
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
