--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@stripe/stripe-js": "^1.52.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
